     description, use the new set_description instead
   * hit=yes in anim is now an alias of hit=hit,kill instead of hit=hit
     this should fix the sliding bug and fix more bugs than it creates
   * friendlier boolean matching for unit [filter] and unit [wml_filter]
   * fixed [special_filter] not working properly (#8212)
   * fixed [variables] not working properly for Multiplayer mode
 * user interface:
   * new sounds for user interface events
   * added the option to show warnings about deprecated WML usage
   * added the "ignore all" option to continue observing during massive OOS
   * show total amount of visible villages (patch #698)
   * added drag & drop to move units
 * misceleanous changes and bug fixes
   * an friendly healer hill now stop poisoned unit to lose HP
   * a unit that dies while attacking will now correctly play it's own death
   * turn bell can sound if other soundFX are turned off
   * the first turn starts again with the proper time of day (bug 8637)
   * removes the scaling handling in the halo, removing quite some code
   * fixed various problems found by valgrind, note some invalid access are
     now protected by asserts so there might be more crashes instead of silent
     memory corruptions (bug #8715 and bug #8756)
   * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
   * fixed "End Turn" button clickable after Ctrl-F (bug #6556)
   * fixed autosaves not getting deleted for last campaign scenario and
     multiplayer (bug #8762)
   * Performance : wml compression is done in the helper threads instead of
     the main thread
   * Added some protection against crashing when attacking with units with 
     a high or negative amount of hitpoints (bug #6154, bug #7955, bug #8541) 
     -1 hitpoints will still cause a crash.

Version 1.3.1:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Eastern Invasion:
     * Drowned Planes the dragon starts on grassland